--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,7 @@
     "description": "Worse reflection implementations for reference finding",
     "license": "MIT",
     "type": "phpactor-extension",
+    "minimum-stability": "dev",
     "authors": [
         {
             "name": "Daniel Leech",
@@ -11,7 +12,10 @@
     ],
 
     "require": {
-        "phpactor/container": "^1.0"
+        "phpactor/container": "^1.0",
+        "phpactor/reference-finder-extension": "^0.1.0@dev",
+        "phpactor/worse-reference-finders": "^0.1.0@dev",
+        "phpactor/worse-reflection-extension": "^0.1.0"
     },
     "require-dev": {
         "phpstan/phpstan": "^0.10.6",
