--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
     "require": {
         "phpactor/container": "^1.0",
         "phpactor/reference-finder-extension": "~0.1.3",
+        "phpactor/source-code-filesystem-extension": "~0.1.3",
         "phpactor/worse-reference-finders": "~0.1.1",
         "phpactor/worse-reflection-extension": "~0.1"
     },
