--- a/composer.json
+++ b/composer.json
@@ -15,11 +15,11 @@
         "phpactor/container": "^1.0",
         "phpactor/reference-finder-extension": "^0.1.3",
         "phpactor/source-code-filesystem-extension": "~0.1.3",
-        "phpactor/worse-reference-finders": "^0.2.0",
-        "phpactor/worse-reflection-extension": "~0.1"
+        "phpactor/worse-reference-finders": "^0.2.3",
+        "phpactor/worse-reflection-extension": "^0.2"
     },
     "require-dev": {
-        "phpstan/phpstan": "^0.10.6",
+        "phpstan/phpstan": "^0.11.6",
         "phpunit/phpunit": "^7.5",
         "friendsofphp/php-cs-fixer": "^2.13"
     },
