--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
     ],
 
     "require": {
+        "php": "^7.2",
         "phpactor/container": "^1.0",
         "phpactor/reference-finder-extension": "^0.1.3",
         "phpactor/source-code-filesystem-extension": "~0.1.3",
