--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,6 @@
             "email": "daniel@dantleech.com"
         }
     ],
-
     "require": {
         "php": "^7.2",
         "phpactor/container": "^1.0",
@@ -20,7 +19,7 @@
         "phpactor/worse-reflection-extension": "^0.2"
     },
     "require-dev": {
-        "phpstan/phpstan": "^0.11.6",
+        "phpstan/phpstan": "~0.12.0",
         "phpunit/phpunit": "^7.5",
         "friendsofphp/php-cs-fixer": "^2.13"
     },
