--- a/composer.json
+++ b/composer.json
@@ -10,12 +10,12 @@
         }
     ],
     "require": {
-        "php": "^7.3",
-        "phpactor/container": "^1.0",
+        "php": "^7.3 || ^8.0",
+        "phpactor/container": "^1.3.4",
         "phpactor/reference-finder-extension": "^0.1.3",
         "phpactor/source-code-filesystem-extension": "~0.1.3",
-        "phpactor/worse-reference-finders": "^0.2.3",
-        "phpactor/worse-reflection-extension": "^0.2"
+        "phpactor/worse-reference-finders": "^0.2.5",
+        "phpactor/worse-reflection-extension": "^0.2.4"
     },
     "require-dev": {
         "ergebnis/composer-normalize": "^2.0",
